# trusted-firmware-m-zephyr-module

./: CMakeLists.txt  init-git.sh
tf-m-tests/app/: CMakeLists.txt
trusted-firmware-m/: toolchain_GNUARM.cmake
trusted-firmware-m/lib/ext/mcuboot/: CMakeLists.txt
